[package]
name = "hooch-http"
version = "0.1.4"
edition = "2024"
description = "HTTP addition to the hooch runtime"
authors = ["Bartek"]
license = "Apache-2.0"
repository = "https://github.com/bwintertkb/hooch-http"
readme = "README.md"
keywords = ["async", "http", "io", "non-blocking"]
categories = ["asynchronous"]

[dependencies]
futures = "0.3.31"
hooch = "0.1.6"
